--- a/public/css/index.css
+++ b/public/css/index.css
@@ -103,3 +103,7 @@ body {
     display: inline-block;
     border-radius: 50%;
   }
+  .alertbar {
+    display: inline-block;
+    margin-top: 10px;
+  }
