--- a/views/new.html
+++ b/views/new.html
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Project name</a>
+                <a class="navbar-brand" href="/">Project name</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -70,35 +70,38 @@
                 <form action="/new" method="post">
                     <div class="form-group">
                         <label for="exampleInputEmail1">姓名</label>
-                        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="請輸入姓名"
+                        <input type="text" class="form-control" id="nameipt" placeholder="請輸入姓名(請輸入英文4-8字，不能有特殊符號)"
                             name="uname">
+                        <span class="alertbar" id="alertByNameSpan"></span>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">性別</label>
                         <div>
                             <label class="radio-inline">
-                                <input type="radio" name="sex" id="inlineRadio1" value="0"> 男
+                                <input type="radio" name="sex" id="sexId" value="0"> 男
                             </label>
                             <label class="radio-inline">
-                                <input type="radio" name="sex" id="inlineRadio2" value="1"> 女
+                                <input type="radio" name="sex" id="sexId" value="1"> 女
                             </label>
                         </div>
+                        <span class="alertbar"></span>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">年齡</label>
-                        <input type="unmber" class="form-control" id="exampleInputEmail1" placeholder="請輸入年齡"
-                            name="age">
+                        <input type="unmber" class="form-control" id="ageId" placeholder="請輸入年齡(請輸入阿拉伯數字)" name="age">
+                        <span class="alertbar">＊請輸入年齡</span>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1">興趣</label>
                         <input type="text" class="form-control" id="exampleInputEmail1" placeholder="請輸入興趣"
                             name="habbies">
                     </div>
-                    <button type="submit" class="btn btn-default">提交</button>
+                    <button type="submit" class="btn btn-default" id="btnId">提交</button>
                 </form>
             </div>
         </div>
     </div>
+    <script src="/public/js/alert.js"></script>
 </body>
 
 </html>
